<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_activity_items">ItemsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="string_name">Name</string>
    <string name="string_username">Username</string>
    <string name="string_private_information">Private information</string>
    <string name="string_email_address">Email address</string>
    <string name="string_phone_number">Phone number</string>
    <string name="string_gender">Gender</string>

    <string name="default_name">John Doe</string>
    <string name="default_username">John.Doe</string>
    <string name="default_email_address">John.Doe@defaultemail.com</string>
    <string name="default_phone_number">16048555555</string>

    <!-- Fragment and Dialog Tags -->
    <string name="dialog_change_photo">Change Photo</string>
    <string name="fragment_account">Account</string>
    <string name="fragment_settings">Settings</string>
    <string name="preferences_notifications">Notifications</string>
    <string name="preferences_sync">Sync</string>
    <string name="preferences_about">About</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Not Specified</item>
    </string-array>


    <!-- Preference Strings -->
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="summary_account_settings">Edit account settings</string>
    <string name="title_account_settings">Account Settings</string>
    <string name="key_account_settings">key_account_settings</string>

    <string name="default_storage">My Notes</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the notes when wifi is available</string>

    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">At Pluralsight we\'re a team of dedicated authors aiming to make tech skills easier to keep up with.</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Questions? Concerns? Send us feedback!</string>
    <string name="url_support">https://www.pluralsight.com/contact</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://help.pluralsight.com/help</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.pluralsight.com/privacy</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.pluralsight.com/terms</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="key_notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="key_name">key_name</string>
    <string name="key_username">key_username</string>
    <string name="key_email">key_email</string>
    <string name="key_phone">key_phone</string>
    <string name="key_gender">key_gender</string>
    <string name="pref_title_data">Data</string>
    <string name="title_backup_frequency">Data Backup Frequency</string>
    <string name="summary_backup_frequency">If wifi is not available, how often do you want to backup your data?</string>
    <string name="key_backup_frequency">key_backup_frequency</string>

    <string name="title_activity_settings1">SettingsActivity1</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
