<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:selectable="false"
        android:summary="@string/summary_about" />

    <Preference
        android:summary="@string/app_version"
        android:title="@string/title_version" />

    <Preference
        android:key="@string/key_send_feedback"
        android:summary="@string/summary_support"
        android:title="@string/title_send_feedback">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/url_support" />
    </Preference>

    <!-- preference opens url in browser -->
    <Preference
        android:summary="@string/summary_faq"
        android:title="@string/title_faq">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/url_faq" />
    </Preference>

    <Preference android:title="@string/privacy_policy">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/url_privacy" />
    </Preference>

    <Preference android:title="@string/title_terms">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/url_terms" />
    </Preference>
</PreferenceScreen>