<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_notifications_new_message"
        android:title="@string/title_new_notification_sound" />

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="@string/key_notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:summary="@string/summary_choose_ringtone"
        android:title="@string/pref_title_ringtone"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_vibrate"
        android:summary="@string/summary_vibrate"
        android:title="@string/title_vibrate" />

</PreferenceScreen>
