<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#fff">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <include
            layout="@layout/layout_account_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_name"
                    android:inputType="textPersonName"
                    android:id="@+id/input_name"
                    android:textSize="15sp"
                    android:text="@string/default_name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_username"
                    android:inputType="text"
                    android:id="@+id/input_username"
                    android:textSize="15sp"
                    android:text="@string/default_username"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_private_information"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_email_address"
                    android:inputType="textEmailAddress"
                    android:id="@+id/input_email_address"
                    android:textSize="15sp"
                    android:text="@string/default_email_address"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_phone_number"
                    android:inputType="phone"
                    android:id="@+id/input_phone_number"
                    android:textSize="15sp"
                    android:text="@string/default_phone_number"/>

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_gender"
                style="@style/InputLabel"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gender_spinner"
                android:entries="@array/gender_array">

            </Spinner>

        </LinearLayout>

    </ScrollView>


</LinearLayout>